backup/dotnetcore.yaml
apiVersion: v1
kind: Pod
metadata: 
 name: myweb
 labels: 
  name: myweb
spec: 
 containers:
 - name: myweb 
   image: xjtrab/empty:latest
   ports:
   - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myweb-service
spec:
  type: NodePort
  ports:
  - port: 80
   nodePort: 31002
  selector:
    app: myweb

---
apiVersion: extensions/v1beta1
kind:Deployment
metadata:
  name: myweb-deployment
spec:
  replicas: 3
  template: 
   metadata:
    labels:
      app: myweb
   spec:
    containers:
      - name: myweb
        image: xjtrab/empty:latest
        ports: 
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata: 
  name: mydotnet-svc
  labels: 
    app: dotnetweb
spec:
  ports:
  - port: 80
  selector:
    app: dotnetweb
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mydotnet
spec:
  replicas: 3
  template:
    metadata:
     labels:
      app: dotnetweb
    spec:
      containers:
        - name: dotnetweb
          image: xjtrab/k8sdocker:0.0.3
          ports:
          - containerPort: 80
---
